Log of changes to SQUAREM

   o	first release:  August 8, 2010

   o	second release:  August 9, 2010
		- fixed a bug in `cyclem1' and `cyclem2' that croped up when testing under Windows 64-bit.  This was due to QR-decomposition using LAPACK.  

   o	third release:  September 26, 2010
	- modified the `cat' statement such that it is effective only when trace = TRUE

   o	fourth release:  December 31, 2010
	- There was a bug in the check for convergence in all the 4 functions: squarem1, squarem2, cyclem1 and cyclem2.   It was pointed out by Roger Koenker.  It is now fixed.
	- A slight change was made to documentation regarding the objective function.

   o	Fifth release:  August 10, 2016
	- created vignettes with several examples showing how to accelerate convergence using SQUAREM
	- created demo examples showing how to use SQUAREM to accelerate convergence

   o   	October 19, 2016
	- return intermediate parameter vector and merit function values

   o   	January 2, 2020
	- changed code for detecting "try-error" to conform to the changes in latest R release

  o   	February 21, 2020
	- Added citation information for how to cite the package