@@ -3,7 +3,7 @@
 \title{Squared Extrapolation Methods for Accelerating Slowly-Convergent 
 Fixed-Point Iterations}
 \description{Globally-convergent, partially monotone, acceleration schemes for 
-  accelerating the convergence of \emph{any} smooth, monotone, slowly-converging
+  accelerating the convergence of *any* smooth, monotone, slowly-converging
   contraction mapping. It can be used to accelerate the convergence of a wide 
   variety of iterations including the expectation-maximization (EM) algorithms 
   and its variants, majorization-minimization (MM) algorithm, power method for 
@@ -28,7 +28,7 @@ Fixed-Point Iterations}
       a ''merit'' function which attains its local minimum at the fixed-point 
       of \eqn{F}{F}.  This function should accept a parameter vector as 
       input and should return a scalar value.  In the EM algorithm, the merit 
-      function \eqn{L}{L} is the negative of log-likelihood. In some problems, a natural 
+      function \eqn{L}{L} is the **negative of log-likelihood**. In some problems, a natural 
       merit function may not exist, in which case the algorithm works with 
       only \code{fixptfn}. The merit function function \code{objfn} does not 
       have to be specified, even when a natural merit function is available, 
